service1.yml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  ports:
  - port: 80
    targetPort: http
    name: http
  selector:
    app: service
    version: master
