service3.yml
apiVersion: v1
kind: Service
metadata:
  name: service-feature-b
spec:
  ports:
  - port: 80
    targetPort: http
    name: http
  selector:
    app: service
    version: feature-b
