destination1.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: service-master
spec:
  host: service.default.svc.cluster.local
  subsets:
  - name: master
    labels:
      app: service
      version: master
