destination2.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: service-feature-a
spec:
  host: service.default.svc.cluster.local
  subsets:
  - name: feature-a
    labels:
      app: service
      version: feature-a
