destination3.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: service-feature-b
spec:
  host: service.default.svc.cluster.local
  subsets:
  - name: feature-b
    labels:
      app: service
      version: feature-b
