virtualservice-no-routing.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service
spec:
  hosts:
  - service.default.svc.cluster.local
  http:
  - name: 'master'
    route:
    - destination:
        host: service.default.svc.cluster.local
