virtualservice-with-routing.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service
spec:
  hosts:
  - service.default.svc.cluster.local
  http:
  - match:
    - headers:
        X-QS:
          exact: feature-a
    route:
    - destination:
        host: service-feature-a.default.svc.cluster.local
  - match:
    - headers:
        X-QS:
          exact: feature-b
    route:
    - destination:
        host: service-feature-b.default.svc.cluster.local
  - route:
    - destination:
        host: service.default.svc.cluster.local
